<resources>
    <string name="app_name">SmartHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="notice">공지사항</string>
    <string name="alarm">알람내역</string>
    <string name="nowhome">우리집</string>
    <string name="board">자유게시판</string>
    <string name="qna">QnA</string>
    <string name="voice">음성인식</string>
    <string name="search">Search</string>

    <string name="light1">조명1</string>
    <string name="light2">조명2</string>
    <string name="fan">선풍기</string>
    <string name="door">문</string>
    <string name="window">창문</string>
    <string name="CCTV">CCTV</string>



    <!--    <string name="app_name">Speech To Text</string>-->
    <!--    <string name="action_settings">Settings</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

</resources>