<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/notice"
            android:title="@string/notice" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/alarm"
            android:title="@string/alarm" />

        <item
            android:id="@+id/nav_nowhome"
            android:icon="@drawable/nowhome"
            android:title="@string/nowhome" />

        <item
            android:id="@+id/nav_board"
            android:icon="@drawable/board"
            android:title="@string/board" />
        <item
            android:id="@+id/nav_qna"
            android:icon="@drawable/qna"
            android:title="@string/qna" />
    </group>
</menu>