<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6F5FF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchModeLight1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/light1"
                    tools:ignore="TouchTargetSizeCheck" />

                <Switch
                    android:id="@+id/switchModeLight2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/light2"
                    tools:ignore="TouchTargetSizeCheck" />

                <Switch
                    android:id="@+id/switchModeFan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/fan"
                    tools:ignore="TouchTargetSizeCheck" />

                <Switch
                    android:id="@+id/switchModeDoor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/door"
                    tools:ignore="TouchTargetSizeCheck" />

                <Switch
                    android:id="@+id/switchModeWindow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/window"
                    tools:ignore="TouchTargetSizeCheck" />

                <Switch
                    android:id="@+id/switchModeCCTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/CCTV"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnModeCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="확인" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>